layout bug fixes

--- a/css/style.css
+++ b/css/style.css
@@ -119,9 +119,9 @@ h4 {
   color: #ad4e0a;
 }
 
-/* Rules for displays over 550px */
+/* Rules for displays over 600px */
 
-@media only screen and (min-width: 550px) {
+@media only screen and (min-width: 600px) {
   .apps {
     display: flex;
     flex-wrap: nowrap;
